(library
  (name process_types)
  (wrapped false)
  (modules
    process_types)
  (libraries
    base
    utils_core
    sys_utils))

(library
  (name process)
  (wrapped false)
  (modules
    process)

  (libraries
    process_types
    utils_core
    utils_ocaml_overrides
    stack_utils
    sys_utils))
